<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rl_pop"
    android:background="@color/transparent6">

       <LinearLayout
           android:id="@+id/ll_pop"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical"
           android:layout_marginTop="100dp"
           android:layout_marginBottom="100dp"
           android:layout_marginLeft="20dp"
           android:layout_marginRight="20dp"
           android:background="@drawable/gray_radius2_shape">
           <TextView
               android:id="@+id/tv_title"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/add_device_name"
               android:layout_gravity="center_horizontal"
               android:textColor="@color/black22"
               android:textSize="18sp"
               android:layout_marginTop="20dp"
               />
           <TextView
               android:id="@+id/tv_one"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/set_device_name"
               android:layout_below="@id/tv_title"
               android:layout_marginLeft="10dp"
               android:textSize="16sp"
               android:textColor="@color/black22"
               android:layout_marginTop="10dp"/>

           <com.hipad.bluetoothantilost.view.ClearEditText
               android:id="@+id/edit_device_name"
               android:layout_width="match_parent"
               android:layout_height="48dp"
               android:background="@color/white"
               android:layout_below="@id/tv_one"
               android:paddingLeft="10dp"
               android:paddingRight="15dp"
               android:textSize="15sp"
               android:textColor="@color/black22"
               android:layout_marginTop="10dp"
               />
           <TextView
               android:id="@+id/tv_two"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/set_lost_hint"
               android:layout_below="@id/edit_device_name"
               android:layout_marginLeft="10dp"
               android:textSize="16sp"
               android:textColor="@color/black22"
               android:layout_marginTop="10dp"/>

           <RelativeLayout
               android:id="@+id/rl_hint"
               android:layout_width="match_parent"
               android:layout_height="48dp"
               android:background="@color/white"
               android:layout_below="@id/tv_two"
               android:layout_marginTop="10dp">
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/anti_lost_hint"
                   android:layout_marginLeft="10dp"
                   android:textSize="16sp"
                   android:textColor="@color/black22"
                   android:layout_centerVertical="true"/>

               <com.hipad.bluetoothantilost.view.SwitchButton
                   android:id="@+id/change_switch"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_alignParentRight="true"
                   android:layout_marginRight="10dp"
                   android:checked="true"
                   style="@style/SwitchButtonStyleMD"
                   android:layout_centerVertical="true"/>
           </RelativeLayout>
           <Button
               android:id="@+id/btn_change_sure"
               android:layout_width="match_parent"
               android:layout_height="45dp"
               android:layout_below="@id/rl_hint"
               android:layout_centerHorizontal="true"
               android:background="@color/ble_blue"
               android:layout_margin="40dp"
               android:text="@string/sure"
               android:textSize="16sp"
               android:textColor="@color/black22"/>
       </LinearLayout>
</RelativeLayout>