<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteF5"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.hipad.bleantilost.activity.SettingActivity">
    <include
        android:id="@+id/rl_title"
        layout="@layout/title_bar"/>
    <RelativeLayout
        android:id="@+id/rl_clear_cache"
        android:layout_below="@id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/forty_eight_dp"
        android:background="@color/white"
        android:layout_marginTop="@dimen/thirty_dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/clear_cache"
            android:textColor="@color/black22"
            android:layout_marginLeft="@dimen/twenty_dp"
            android:textSize="16sp"/>
        <ImageView
            android:id="@+id/iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/chevron_right"
            android:layout_marginRight="@dimen/twenty_dp"/>
        <TextView
            android:id="@+id/tv_cache_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="14sp"
            android:textColor="@color/black72"
            android:layout_marginRight="8dp"
            android:layout_toLeftOf="@id/iv"/>
    </RelativeLayout>
    <View
        android:id="@+id/view_line_one"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/grayDC"
        android:layout_below="@id/rl_clear_cache"/>

    <RelativeLayout
        android:id="@+id/rl_introduce"
        android:layout_below="@id/view_line_one"
        android:layout_width="match_parent"
        android:layout_height="@dimen/forty_eight_dp"
        android:background="@color/white"
        android:layout_marginTop="0.5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/bluetooth_switch"
            android:layout_marginLeft="20dp"
            android:textColor="@color/black22"
            android:textSize="16sp"
            />

        <com.hipad.bluetoothantilost.view.SwitchButton
            android:id="@+id/switch_setting"
            style="@style/SwitchButtonStyleMD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"/>
    </RelativeLayout>
    <com.hipad.bluetoothantilost.view.ButtonRectangle
        android:id="@+id/btn_quit"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="30dp"
        android:layout_alignParentBottom="true"
        android:text="@string/quit"
        android:textColor="@color/black22"
        android:background="@color/redf4"
       />
</RelativeLayout>
