<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent7">
    <RelativeLayout
        android:id="@+id/rl_help_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        >
        <RelativeLayout
            android:id="@+id/rl_menu"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/help_cycle_menu_shape"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/list"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
        <ImageView
            android:id="@+id/iv_creation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/creation"
            android:layout_marginLeft="60dp"/>
        <TextView
            android:id="@+id/tv_menu_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_menu"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/guide_help_menu"/>
        <TextView
            android:id="@+id/tv_menu_know"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_menu_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/radius5_shape"
            android:text="@string/know"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_add_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/rl_cycle"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/help_cycle_shape"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="170dp"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/add"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
        <ImageView
            android:id="@+id/iv_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/creation"
            android:layout_below="@id/rl_cycle"
            android:layout_marginLeft="90dp"/>
        <TextView
            android:id="@+id/tv_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:layout_below="@id/iv_down"
            android:text="@string/guide_help"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:lineSpacingMultiplier="1.3"
            />

        <TextView
            android:id="@+id/tv_know"
            android:layout_below="@id/tv_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/know"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@drawable/radius5_shape"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center"
            />
    </RelativeLayout>
</RelativeLayout>